--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,12 +1,15 @@
 {% extends "layout.html" %}
-{% block search %}
+{% set active_page = "home" %}
+{% block content %}
   <div class="error_div" id="error_div">
       <p id="error_p"></p>
   </div>
-  <div class="container">
-    <div class="row center-block">
-      <h1>Welcome!</h1>
-
+  <div class="jumbotron">
+    <div class="container well">
+        <h1><a href="/" style="color:rgb(158, 202, 59);">Music Me: {{ g.name }}</a></h1>
+        <p>Berkshire Girls Code - January 15, 2015</p>
     </div>
+  </div>
+
   </div>
 {% endblock %}
